@@ -75,6 +75,14 @@ alert slack.message "slack" {
 # Twilio plugin
 # ---------------------------------------------------------------------------------------------------------------------
 
+# Reads alerts over a phone call using Twilio
+alert twilio.call "phone" {
+  sid = "twilio sid"
+  token = "twilio token"
+  from = "+01 867 5309"
+  to = "+01 867 5309"
+}
+
 # Sends alerts over SMS using Twilio
 alert twilio.sms "sms" {
   sid = "twilio sid"
