@@ -1,6 +1,8 @@
 package twilio
 
 import (
+	"bytes"
+	"encoding/xml"
 	"fmt"
 	"github.com/csmith/goplum"
 	"net/http"
@@ -17,6 +19,8 @@ func (p Plugin) Alert(kind string) goplum.Alert {
 	switch kind {
 	case "sms":
 		return SmsAlert{}
+	case "call":
+		return CallAlert{}
 	default:
 		return nil
 	}
@@ -26,20 +30,44 @@ func (p Plugin) Check(_ string) goplum.Check {
 	return nil
 }
 
-type SmsAlert struct {
+type BaseAlert struct {
 	To    string
 	From  string
 	Sid   string
 	Token string
 }
 
-func (n SmsAlert) Send(details goplum.AlertDetails) error {
+func (b BaseAlert) Validate() error {
+	if len(b.To) == 0 {
+		return fmt.Errorf("missing required argument: to")
+	}
+
+	if len(b.From) == 0 {
+		return fmt.Errorf("missing required argument: from")
+	}
+
+	if len(b.Sid) == 0 {
+		return fmt.Errorf("missing required argument: sid")
+	}
+
+	if len(b.Token) == 0 {
+		return fmt.Errorf("missing required argument: token")
+	}
+
+	return nil
+}
+
+type SmsAlert struct {
+	BaseAlert `config:",squash"`
+}
+
+func (s SmsAlert) Send(details goplum.AlertDetails) error {
 	req, err := http.NewRequest(
 		http.MethodPost,
-		fmt.Sprintf("https://api.twilio.com/2010-04-01/Accounts/%s/Messages.json", n.Sid),
+		fmt.Sprintf("https://api.twilio.com/2010-04-01/Accounts/%s/Messages.json", s.Sid),
 		strings.NewReader(url.Values{
-			"To":   []string{n.To},
-			"From": []string{n.From},
+			"To":   []string{s.To},
+			"From": []string{s.From},
 			"Body": []string{details.Text},
 		}.Encode()),
 	)
@@ -48,7 +76,7 @@ func (n SmsAlert) Send(details goplum.AlertDetails) error {
 	}
 
 	req.Header.Add("Content-Type", "application/x-www-form-urlencoded")
-	req.SetBasicAuth(n.Sid, n.Token)
+	req.SetBasicAuth(s.Sid, s.Token)
 	res, err := client.Do(req)
 	if err != nil {
 		return err
@@ -63,22 +91,49 @@ func (n SmsAlert) Send(details goplum.AlertDetails) error {
 	return nil
 }
 
-func (n SmsAlert) Validate() error {
-	if len(n.To) == 0 {
-		return fmt.Errorf("missing required argument: to")
+func (s SmsAlert) Validate() error {
+	return s.BaseAlert.Validate()
+}
+
+type CallAlert struct {
+	BaseAlert `config:",squash"`
+}
+
+func (c CallAlert) Send(details goplum.AlertDetails) error {
+	var b bytes.Buffer
+	if err := xml.EscapeText(&b, []byte(details.Text)); err != nil {
+		return err
 	}
 
-	if len(n.From) == 0 {
-		return fmt.Errorf("missing required argument: from")
+	req, err := http.NewRequest(
+		http.MethodPost,
+		fmt.Sprintf("https://api.twilio.com/2010-04-01/Accounts/%s/Calls.json", c.Sid),
+		strings.NewReader(url.Values{
+			"To":    []string{c.To},
+			"From":  []string{c.From},
+			"Twiml": []string{fmt.Sprintf("<Response><Say>Go plum alert: %s</Say></Response>", b.String())},
+		}.Encode()),
+	)
+	if err != nil {
+		return err
 	}
 
-	if len(n.Sid) == 0 {
-		return fmt.Errorf("missing required argument: sid")
+	req.Header.Add("Content-Type", "application/x-www-form-urlencoded")
+	req.SetBasicAuth(c.Sid, c.Token)
+	res, err := client.Do(req)
+	if err != nil {
+		return err
 	}
 
-	if len(n.Token) == 0 {
-		return fmt.Errorf("missing required argument: token")
+	defer res.Body.Close()
+
+	if res.StatusCode >= 400 {
+		return fmt.Errorf("bad response from Twilio: HTTP %d", res.StatusCode)
 	}
 
 	return nil
+}
+
+func (c CallAlert) Validate() error {
+	return c.BaseAlert.Validate()
 }
