@@ -12,6 +12,8 @@
   to respect it (https://github.com/csmith/goplum/issues/10[#10])
 * Check state is now persisted across restarts
   (https://github.com/csmith/goplum/issues/14[#14])
+* Added `twilio.call` alert for announcing alerts using TTS
+  over a phone call.
 
 === Changes
 
